--- a/creative_practice/index.html
+++ b/creative_practice/index.html
@@ -10,7 +10,7 @@
     <p>
       the truth is out there
     </p>
-    <a href="https://www.cosmicharding.com"></a>
+    <a href="https://www.cosmicharding.com">welcome</a>
     <img id="sky" src="https://live.staticflickr.com/2702/4465318125_12da11ce7f_b.jpg" alt="photo of the northern lights"> 
 
       <!--"Northern Lights, Tromso" by GuideGunnar - Arctic Norway is licensed with CC BY-SA 2.0.
