--- a/my_portfolio/homepage.html
+++ b/my_portfolio/homepage.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -14,3 +15,4 @@
 <p>My name is Sunniha Hussain, and I'm a senior at Fordham University Lincoln Center. Although I'm majoring in New Media and Digital Design, I'm interested in a variety of mindful activities such as creative writing, painting, and cooking. I hope to create works that reflect my passions and experiences. Below, you can view one of my favorite go-to wellness blogs to start off the day. </p>
 <a href="https://www.mindbodygreen.com/" target="_blank">Visit MindBodyGreen</a>
 <p>Thanks for checking out my portfolio!</p>
+</html>
